--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "34202f52",
    "metadata": {},
    "outputs": [],
@@ -17,17 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "9151710a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((177, 234), (177,))"
+       "((177, 193), (177,))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "997b4bed",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "3b3c8b68",
    "metadata": {},
    "outputs": [],
@@ -98,10 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "56a8d2dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\omarj\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\torch\\optim\\lr_scheduler.py:62: UserWarning: The verbose parameter is deprecated. Please use get_last_lr() to access the learning rate.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "num_epochs = 1000\n",
     "batch_size = 8\n",
@@ -127,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "d19b62fd",
    "metadata": {},
    "outputs": [
@@ -135,57 +144,85 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 102/1000 [00:05<00:40, 22.43it/s]"
+      " 10%|█         | 101/1000 [00:04<00:41, 21.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/1000], Loss: 0.1555, Accuracy: 98.30%\n"
+      "Epoch [100/1000], Loss: 0.1783, Accuracy: 95.45%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 203/1000 [00:10<00:34, 23.10it/s]"
+      " 20%|██        | 203/1000 [00:08<00:28, 27.52it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [200/1000], Loss: 0.0752, Accuracy: 98.30%\n"
+      "Epoch [200/1000], Loss: 0.1711, Accuracy: 94.89%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 302/1000 [00:14<00:29, 23.42it/s]"
+      " 30%|███       | 304/1000 [00:11<00:26, 26.27it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [300/1000], Loss: 0.0782, Accuracy: 97.73%\n"
+      "Epoch [300/1000], Loss: 0.1275, Accuracy: 96.02%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 36%|███▋      | 364/1000 [00:17<00:29, 21.31it/s]"
+      " 40%|████      | 405/1000 [00:15<00:21, 27.28it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping triggered at epoch 365\n",
-      "Final training loss: 0.0590\n",
+      "Epoch [400/1000], Loss: 0.1146, Accuracy: 95.45%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 503/1000 [00:19<00:18, 27.06it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [500/1000], Loss: 0.1155, Accuracy: 93.18%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 54%|█████▎    | 536/1000 [00:20<00:17, 26.14it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Early stopping triggered at epoch 537\n",
+      "Final training loss: 0.0969\n",
       "Training complete. Model saved to data.pth\n"
      ]
     },
