Fixed some errors

--- a/model.ipynb
+++ b/model.ipynb
@@ -144,85 +144,44 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 101/1000 [00:04<00:41, 21.61it/s]"
+      " 10%|█         | 104/1000 [00:04<00:35, 25.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/1000], Loss: 0.1783, Accuracy: 95.45%\n"
+      "Epoch [100/1000], Loss: 0.1902, Accuracy: 95.45%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 203/1000 [00:08<00:28, 27.52it/s]"
+      " 20%|██        | 204/1000 [00:08<00:32, 24.52it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [200/1000], Loss: 0.1711, Accuracy: 94.89%\n"
+      "Epoch [200/1000], Loss: 0.1114, Accuracy: 94.89%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 304/1000 [00:11<00:26, 26.27it/s]"
+      " 30%|███       | 300/1000 [00:12<00:28, 24.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [300/1000], Loss: 0.1275, Accuracy: 96.02%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 405/1000 [00:15<00:21, 27.28it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [400/1000], Loss: 0.1146, Accuracy: 95.45%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 503/1000 [00:19<00:18, 27.06it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch [500/1000], Loss: 0.1155, Accuracy: 93.18%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 54%|█████▎    | 536/1000 [00:20<00:17, 26.14it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Early stopping triggered at epoch 537\n",
-      "Final training loss: 0.0969\n",
+      "Epoch [300/1000], Loss: 0.1073, Accuracy: 96.59%\n",
+      "Early stopping triggered at epoch 301\n",
+      "Final training loss: 0.1184\n",
       "Training complete. Model saved to data.pth\n"
      ]
     },
