Updated the model and data files

--- a/model.ipynb
+++ b/model.ipynb
@@ -73,27 +73,45 @@
     "class NeuralNet(nn.Module):\n",
     "    def __init__(self, input_size, hidden_size, num_classes, dropout_rate=0.3):\n",
     "        super(NeuralNet, self).__init__()\n",
-    "        self.l1 = nn.Linear(input_size, hidden_size)\n",
-    "        self.l2 = nn.Linear(hidden_size, hidden_size//2)  \n",
-    "        self.l3 = nn.Linear(hidden_size//2, num_classes)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.dropout = nn.Dropout(dropout_rate)\n",
+    "        \n",
+    "        self.input_layer = nn.Linear(input_size, hidden_size)\n",
     "        self.batch_norm1 = nn.BatchNorm1d(hidden_size)\n",
-    "        self.batch_norm2 = nn.BatchNorm1d(hidden_size//2)\n",
-    "    \n",
+    "        \n",
+    "        self.hidden_layer1 = nn.Linear(hidden_size, hidden_size // 2)\n",
+    "        self.batch_norm2 = nn.BatchNorm1d(hidden_size // 2)\n",
+    "        \n",
+    "        self.hidden_layer2 = nn.Linear(hidden_size // 2, hidden_size // 4)\n",
+    "        self.batch_norm3 = nn.BatchNorm1d(hidden_size // 4)\n",
+    "\n",
+    "        self.output_layer = nn.Linear(hidden_size // 4, num_classes)\n",
+    "\n",
+    "        self.activation = nn.GELU()\n",
+    "        self.dropout = nn.Dropout(dropout_rate)\n",
+    "\n",
+    "        self.residual_connection = nn.Linear(hidden_size, hidden_size // 2)\n",
+    "\n",
     "    def forward(self, x):\n",
-    "        out = self.l1(x)\n",
+    "        out = self.input_layer(x)\n",
     "        out = self.batch_norm1(out)\n",
-    "        out = self.relu(out)\n",
+    "        out = self.activation(out)\n",
     "        out = self.dropout(out)\n",
     "        \n",
-    "        out = self.l2(out)\n",
+    "        residual = self.residual_connection(out)\n",
+    "\n",
+    "        out = self.hidden_layer1(out)\n",
     "        out = self.batch_norm2(out)\n",
-    "        out = self.relu(out)\n",
+    "        out = self.activation(out)\n",
     "        out = self.dropout(out)\n",
+    "\n",
+    "        out += residual  # Add residual connection\n",
     "        \n",
-    "        out = self.l3(out)\n",
-    "        return out"
+    "        out = self.hidden_layer2(out)\n",
+    "        out = self.batch_norm3(out)\n",
+    "        out = self.activation(out)\n",
+    "        out = self.dropout(out)\n",
+    "\n",
+    "        out = self.output_layer(out)\n",
+    "        return out\n"
    ]
   },
   {
@@ -144,44 +162,85 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 104/1000 [00:04<00:35, 25.37it/s]"
+      " 10%|█         | 101/1000 [00:07<00:57, 15.68it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/1000], Loss: 0.1902, Accuracy: 95.45%\n"
+      "Epoch [100/1000], Loss: 0.4354, Accuracy: 86.93%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 204/1000 [00:08<00:32, 24.52it/s]"
+      " 20%|██        | 203/1000 [00:13<00:52, 15.15it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [200/1000], Loss: 0.1114, Accuracy: 94.89%\n"
+      "Epoch [200/1000], Loss: 0.2839, Accuracy: 91.48%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 300/1000 [00:12<00:28, 24.23it/s]"
+      " 30%|███       | 301/1000 [00:20<00:47, 14.77it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [300/1000], Loss: 0.1073, Accuracy: 96.59%\n",
-      "Early stopping triggered at epoch 301\n",
-      "Final training loss: 0.1184\n",
+      "Epoch [300/1000], Loss: 0.2286, Accuracy: 93.18%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 40%|████      | 403/1000 [00:27<00:39, 14.96it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [400/1000], Loss: 0.2871, Accuracy: 89.20%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50%|█████     | 501/1000 [00:33<00:32, 15.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [500/1000], Loss: 0.2020, Accuracy: 93.75%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 54%|█████▍    | 541/1000 [00:36<00:30, 14.83it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Early stopping triggered at epoch 542\n",
+      "Final training loss: 0.1774\n",
       "Training complete. Model saved to data.pth\n"
      ]
     },
