--- a/model.ipynb
+++ b/model.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": [
-       "((175, 193), (175,))"
+       "((174, 193), (174,))"
       ]
      },
      "execution_count": 2,
@@ -128,7 +128,7 @@
     "\n",
     "\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(\n",
-    "    optimizer, mode='min', factor=0.5, patience=50, verbose=True\n",
+    "    optimizer, mode='min', factor=0.5, patience=patience, verbose=True\n",
     ")\n",
     "\n",
     "\n"
@@ -144,71 +144,85 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 104/1000 [00:04<00:36, 24.79it/s]"
+      " 10%|█         | 104/1000 [00:04<00:31, 28.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/1000], Loss: 0.2053, Accuracy: 96.25%\n"
+      "Epoch [100/1000], Loss: 0.1896, Accuracy: 96.25%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 203/1000 [00:08<00:31, 25.41it/s]"
+      " 20%|██        | 203/1000 [00:07<00:28, 28.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [200/1000], Loss: 0.1336, Accuracy: 97.50%\n"
+      "Epoch [200/1000], Loss: 0.0822, Accuracy: 99.38%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 302/1000 [00:12<00:27, 25.33it/s]"
+      " 30%|███       | 303/1000 [00:11<00:24, 28.38it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [300/1000], Loss: 0.0906, Accuracy: 97.50%\n"
+      "Epoch [300/1000], Loss: 0.0791, Accuracy: 97.50%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 404/1000 [00:16<00:23, 25.50it/s]"
+      " 40%|████      | 404/1000 [00:14<00:20, 28.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [400/1000], Loss: 0.1009, Accuracy: 96.88%\n"
+      "Epoch [400/1000], Loss: 0.0785, Accuracy: 98.12%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|████▏     | 424/1000 [00:17<00:23, 24.70it/s]"
+      " 50%|█████     | 503/1000 [00:18<00:16, 29.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping triggered at epoch 425\n",
-      "Final training loss: 0.0803\n",
+      "Epoch [500/1000], Loss: 0.0573, Accuracy: 98.12%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 54%|█████▎    | 536/1000 [00:19<00:17, 27.09it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Early stopping triggered at epoch 537\n",
+      "Final training loss: 0.0509\n",
       "Training complete. Model saved to data.pth\n"
      ]
     },
