Updated Model notebook

--- a/model.ipynb
+++ b/model.ipynb
@@ -144,71 +144,86 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 105/1000 [00:03<00:28, 31.05it/s]"
+      " 10%|█         | 105/1000 [00:03<00:29, 30.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [100/1000], Loss: 0.2532, Accuracy: 93.75%\n"
+      "Epoch [100/1000], Loss: 0.1995, Accuracy: 97.50%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 205/1000 [00:06<00:26, 30.50it/s]"
+      " 20%|██        | 204/1000 [00:06<00:25, 30.83it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [200/1000], Loss: 0.1390, Accuracy: 96.25%\n"
+      "Epoch [200/1000], Loss: 0.0814, Accuracy: 98.12%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 302/1000 [00:10<00:22, 30.59it/s]"
+      " 30%|███       | 304/1000 [00:10<00:22, 31.30it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [300/1000], Loss: 0.1377, Accuracy: 95.00%\n"
+      "Epoch [300/1000], Loss: 0.0617, Accuracy: 98.75%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 402/1000 [00:13<00:19, 31.12it/s]"
+      " 40%|████      | 404/1000 [00:13<00:18, 31.57it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [400/1000], Loss: 0.1009, Accuracy: 95.62%\n"
+      "Epoch [400/1000], Loss: 0.0702, Accuracy: 96.88%\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 42%|████▏     | 421/1000 [00:14<00:19, 29.95it/s]"
+      " 50%|█████     | 504/1000 [00:16<00:15, 31.29it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Early stopping triggered at epoch 422\n",
-      "Final training loss: 0.1009\n",
+      "Epoch [500/1000], Loss: 0.0826, Accuracy: 96.25%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 60%|██████    | 603/1000 [00:19<00:13, 30.20it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [600/1000], Loss: 0.0561, Accuracy: 97.50%\n",
+      "Early stopping triggered at epoch 604\n",
+      "Final training loss: 0.0481\n",
       "Training complete. Model saved to data.pth\n"
      ]
     },
